resolve #11 issue, the stretching issue is improved although not as good as it should be. There are some proportion issues encountered when changing the window size to become ver big but it better than before. Uses flex now for the top level containers and the inner containers percentages of the parents

--- a/mycss/mainlayout.css
+++ b/mycss/mainlayout.css
@@ -5,59 +5,70 @@ body {
   margin: 0;
   background-color: rgb(190, 190, 190);
 }
-
 .main {
   display: flex;
-  min-height: 100%;
+  height: 100vh;
+  width: 100%;
+  border: 2px solid green;
 }
 
 .left {
-  height: 100vh;
-  width: 20%;
-  border: 2px solid blue;
+  height: 100%;
+  flex: 2;
+  border: 2px solid green;
 }
 .leftupper {
   height: 50%;
-  width: 100%;
-  background-color: rgb(190, 190, 190);
+  padding: 2px 2px 2px 2px;
+}
+#emotion-box-title {
+  height: 5%;
+  padding-left: 2px;
 }
 .leftlower {
   height: 50%;
-  width: 100%;
-  background-color: cadetblue;
-  border-top: 5px solid red;
+  border-top: 2px solid green;
 }
-
-.pic-container {
-  width: 100%;
-  height: 75%;
+#meme-box-title {
+  height: 4%;
+  padding-left: 2px;
+}
+.meme-container {
+  height: 95%;
   overflow-y: scroll;
   overflow-x: hidden;
+  margin-bottom: 0px;
 }
 
 .center {
   height: 100%;
-  width: 60%;
+  flex: 7;
+  border: 2px solid green;
 }
 
 .right {
-  height: 100vh;
-  width: 20%;
-  border: 2px solid blue;
+  height: 100%;
+  border: 2px solid green;
+  flex: 2;
 }
-#descriptionInput {
-  height: 30vh;
+.rightupper {
+  height: 50%;
+  padding: 2px 2px 2px 2px;
+}
+.textarea1 {
+  height: 90%;
+}
+#tags-box-title {
+  height: 4%;
+  padding-left: 2px;
 }
 .rightlower {
-  width: 100%;
-  height: 75vh;
-  background-color: rgb(190, 190, 190);
-  border-top: 5px solid blue;
+  height: 45%;
+  border-top: 2px solid green;
 }
-
 /*max-height: 35vh; */
 #taglist {
   overflow-y: auto;
-  max-height: 50vh;
+  max-height: 100%;
   display: block;
 }
